--- a/src/Componentes/Category/category.css
+++ b/src/Componentes/Category/category.css
@@ -1,17 +1,20 @@
 #contentCategory{
-    display: flex;
-    flex-wrap: wrap;
-  }
-  #imgCategory{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#imgCategory{
   position: center;
+  margin: 8px;
   width: 227px;
   height: 175px;
-  border: 1px solid #9F5441;
+  border: 5px solid #C39C84;
   box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
-  }
-  #nameCategory{
+}
+
+#nameCategory{
   position: center;
   font-family: Playfair Display;
   font-style: normal;
@@ -20,8 +23,5 @@
   line-height: 48px;
   text-align: center;
   letter-spacing: 0.1em;
-  
   color: #000000;
-  
-  }
-  
+}
