--- a/src/Componentes/Category/categories.css
+++ b/src/Componentes/Category/categories.css
@@ -1,17 +1,47 @@
 #contentCategory{
+  margin: 0 3%
+}
+.productsSearch{
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.allProducts{
+  font-size: 20px;
+  font-weight: bold;
+  margin-top:15px;
+}
+.search{
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.inputSearch{
+  background:#ECECEC;
+  border:none;
+  border-radius: 5px;
+}
+.imgSearch{
+  margin-top: 4px;
+  width: 20px;
+  margin-right: 2px;
+}
+::placeholder{
+  padding: 5px;
+}
+.categories{
+  display: flex;
+  justify-content: space-around;
 }
 .imgCategory{
 margin: 8px;
-width: 200px;
-height: 100px;
+width: 300px;
+height: 200px;
 box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.25);
 margin: 10px;
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-
 }
-/* 
 #imagenDamas{
   background-image: url(/assets/mujer.jpg);
   background-position: center;
@@ -41,15 +71,24 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   background-position: center;
   background-size: 250px;
   background-repeat: no-repeat;
-} */
+}
 .nameCategory{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: normal;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 36px;
   line-height: 48px;
   text-align: center;
   letter-spacing: 0.1em;
   color: #000000;
-  background: rgba(255, 255, 255, 0.708);  
+  background: rgba(255, 255, 255, 0.708);
 }
+
+
+
+
+
+
+
+
+
